[workspace]
default-members = ["crate/server"]
members = [
    # Client crates
    "crate/client_utils",
    "crate/kms_client",
    "crate/wasm",
    "crate/cli",
    # Server crates
    "crate/access",
    "crate/crypto",
    "crate/hsm/proteccio",
    "crate/hsm/softhsm2",
    "crate/hsm/utimaco",
    "crate/hsm/base_hsm",
    "crate/interfaces",
    "crate/kmip",
    "crate/server",
    "crate/server_database",
    # Test crates
    "crate/test_kms_server",
]
# Do that if you don't want to enable `dev` feature by default due to the `dev-dependencies` of the cli.
# For more details, read: https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
# note: resolver defaults to 2 in 2021 edition crate, but defaults to 1 in virtual workspace
resolver = "2"

[workspace.package]
version = "5.6.2"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "Bruno Grieder <bruno.grieder@cosmian.com>",
    "Emmanuel Coste <emmanuel.coste@cosmian.com>",
]
license = "BUSL-1.1" # "Business Source License 1.1"
license-file = "LICENSE"
repository = "https://github.com/Cosmian/kms"
keywords = ["kms", "cosmian"]
categories = ["security"]

[profile.release]
lto = true
strip = true

[profile.dev]
strip = "debuginfo"
incremental = false

# proc-macros and build-scripts
[profile.dev.build-override]
strip = "debuginfo"
incremental = false

# external dependencies
[profile.dev.package."*"]
opt-level = 0

[workspace.dependencies]
actix-rt = "2.10"
actix-server = { version = "2.5", default-features = false }
actix-web = { version = "4.10", default-features = false }
async-trait = "0.1"
base64 = "0.22"
bitflags = "2.9"
chrono = "0.4"
clap = { version = "4.5", default-features = false }
cosmian_config_utils = "0.3.1"
cosmian_crypto_core = { version = "10.1", default-features = false, features = [
    "ser",
] }
cosmian_http_client = "0.3.1"
cosmian_logger = "0.3.1"
der = { version = "0.7", default-features = false }
hex = { version = "0.4", default-features = false }
lazy_static = "1.5"
leb128 = "0.2"
libloading = "0.8"
log = { version = "0.4", default-features = false }
lru = "0.12"
native-tls = { version = "0.2", default-features = false }
num_cpus = "1.16"
num-format = "0.4"
num-traits = "0.2"
num-bigint-dig = { version = "0.8", default-features = false }
openssl = { version = "0.10", default-features = false }
pem = "3.0"
pkcs11-sys = "0.2"
rand = "0.9"
reqwest = { version = "0.11", default-features = false }
rustls = "0.23"
serde = "1.0"
serde_json = "1.0"
sha3 = { version = "0.10", default-features = false }
strum = { version = "0.27", default-features = false }
strum_macros = { version = "0.27", default-features = false }
thiserror = "2.0"
time = "0.3"
tiny-keccak = "2.0"
tempfile = "3.19"
tokio = { version = "1.44", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
tracing = "0.1"
url = "2.5"
uuid = "=1.11.1"
x509-cert = { version = "0.2", default-features = false }
x509-parser = "0.17"
zeroize = { version = "1.8", default-features = false }
