[workspace]
default-members = [
    "crate/server",
    "crate/clients/pkcs11/provider",
    "crate/clients/ckms",
]
members = [
    # Common crates
    "crate/kmip",
    # Client crates
    "crate/client_utils",
    "crate/kms_client",
    "crate/wasm",
    "crate/cli",
    "crate/clients/ckms",
    "crate/clients/pkcs11/module",
    "crate/clients/pkcs11/provider",
    # Server crates
    "crate/access",
    "crate/crypto",
    "crate/hsm/proteccio",
    "crate/hsm/crypt2pay",
    "crate/hsm/softhsm2",
    "crate/hsm/smartcardhsm",
    "crate/hsm/utimaco",
    "crate/hsm/base_hsm",
    "crate/interfaces",
    "crate/server",
    "crate/server_database",
    # Test crates
    "crate/test_kms_server",
]
# Do that if you don't want to enable `dev` feature by default due to the `dev-dependencies` of the cli.
# For more details, read: https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
# note: resolver defaults to 2 in 2021 edition crate, but defaults to 1 in virtual workspace
resolver = "2"

[workspace.lints.rust]
nonstandard_style = "deny"
refining_impl_trait = "deny"
future_incompatible = "deny"
keyword_idents = "deny"
let_underscore = "deny"
unreachable_pub = "deny"
unused = "deny"
unsafe_code = "deny"

[workspace.lints.clippy]
# Main clippy categories
pedantic = { level = "deny", priority = 90 }
all = { level = "deny", priority = 80 }
suspicious = { level = "deny", priority = 70 }
complexity = { level = "deny", priority = 60 }
perf = { level = "deny", priority = 50 }
style = { level = "deny", priority = 40 }
cargo = { level = "deny", priority = 30 }
nursery = { level = "deny", priority = 20 }

# Common allows (to be selectively enabled by crates as needed)
similar_names = { level = "allow", priority = 91 }
too_many_lines = { level = "allow", priority = 91 }
ref_option = { level = "allow", priority = 91 }
missing_errors_doc = { level = "allow", priority = 91 }
multiple_crate_versions = { level = "allow", priority = 31 }
redundant_pub_crate = { level = "allow", priority = 21 }
future_not_send = { level = "allow", priority = 21 }
cognitive_complexity = { level = "allow", priority = 21 }
significant_drop_tightening = { level = "allow", priority = 21 }
iter_with_drain = { level = "allow", priority = 21 }
too_long_first_doc_paragraph = { level = "allow", priority = 21 }

# Restriction lints (from server and other crates)
module_name_repetitions = "allow"
unwrap_used = "deny"
get_unwrap = "deny"
expect_used = "deny"
indexing_slicing = "deny"
missing_asserts_for_indexing = "deny"
unwrap_in_result = "deny"
assertions_on_result_states = "deny"
panic = "deny"
panic_in_result_fn = "deny"
renamed_function_params = "deny"
verbose_file_reads = "deny"
str_to_string = "deny"
implicit_clone = "deny"
unreachable = "deny"
as_conversions = "deny"
print_stdout = "deny"
empty_structs_with_brackets = "deny"
unseparated_literal_suffix = "deny"
map_err_ignore = "deny"
redundant_clone = "deny"

[workspace.package]
version = "5.17.0"
edition = "2024"
rust-version = "1.87.0"
authors = [
    "Bruno Grieder <bruno.grieder@cosmian.com>",
    "Emmanuel Coste <emmanuel.coste@cosmian.com>",
]
license = "BUSL-1.1" # "Business Source License 1.1"
license-file = "LICENSE"
repository = "https://github.com/Cosmian/kms"
homepage = "https://github.com/Cosmian/kms"
keywords = ["kms", "cosmian"]
categories = ["security"]

[profile.release]
# Deterministic build configuration for reproducible binaries
# These settings ensure the same source produces identical binaries across builds
lto = "fat"         # Fat LTO: maximum cross-crate optimization for smallest binaries
strip = "symbols"   # Strip symbol tables for smaller binaries
opt-level = "z"     # Optimize for size while maintaining performance
codegen-units = 1   # Single codegen unit: best optimization and determinism
panic = "abort"     # Smaller binaries, no unwinding tables
incremental = false # Disable incremental compilation for determinism
debug = 0           # No debug info (timestamps/paths)

[profile.dev]
strip = "debuginfo"
incremental = false
panic = "abort"     # prevent UB from unwinding panics across extern "C" boundary

# proc-macros and build-scripts
[profile.dev.build-override]
strip = "debuginfo"
incremental = false

# external dependencies
[profile.dev.package."*"]
opt-level = 0

[workspace.dependencies]
actix-cors = "0.6"
actix-files = "0.6.10"
actix-http = "3.10"
actix-identity = "0.6"
actix-rt = "2.10"
actix-session = { version = "0.8" }
actix-server = { version = "2.5", default-features = false }
actix-tls = "3.4"
actix-web = { version = "4.12", default-features = false }
aes-gcm-siv = "0.11.1"
aes-kw = "0.3.0-rc.1"
alcoholic_jwt = "4091"
argon2 = "0.5"
assert_cmd = "2.0"
async-recursion = "1.1"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2.9"
chrono = "0.4"
clap = { version = "4.5", default-features = false }
console_error_panic_hook = "0.1"
cosmian_config_utils = "0.3.1"
cosmian_cover_crypt = "16.0.0"
cosmian_crypto_core = { version = "11.0", default-features = false, features = [
    "ser",
] }
cosmian_findex = "8.0.2"
cosmian_logger = "0.5"
cosmian_sse_memories = "8.0.2"
criterion = { version = "0.5", features = [
    "html_reports",
    "async_tokio",
], default-features = false }
csv = "1.3"
ctor = "0.2"
deadpool-postgres = "0.14"
der = { version = "0.7", default-features = false }
dialoguer = { version = "0.11", default-features = false, features = [
    "editor",
    "fuzzy-select",
    "history",
    "password",
    "completion",
] }
dotenvy = "0.15"
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
hex = { version = "0.4", default-features = false }
http = "1.4"
js-sys = "0.3"
jsonwebtoken = "10.3"
lazy_static = "1.5"
leb128 = "0.2"
libloading = "0.8"
log = { version = "0.4", default-features = false }
lru = "0.16"
mysql_async = { version = "0.36", features = ["native-tls-tls"] }
native-tls = { version = "0.2", default-features = false }
num_cpus = "1.16"
num-format = "0.4"
num-traits = "0.2"
num-bigint-dig = { version = "0.8", default-features = false }
oauth2 = { version = "5.0", features = ["reqwest"], default-features = false }
openssl = { version = "0.10", default-features = false }
openssl-sys = "0.9"
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
pem = "3.0"
pkcs11-sys = "0.2"
p256 = { version = "0.13", features = ["ecdsa"] }
k256 = { version = "0.13", features = ["ecdsa"] }
postgres-openssl = "0.5"
predicates = "3.1"
quick-xml = { version = "0.31", features = ["serialize"] }
quote = "1.0"
rand = "0.9"
rawsql = "0.1"
redis = { version = "0.32", features = [
    "aio",
    "ahash",
    "script",
    "connection-manager",
    "tokio-comp",
] }
regex = "1"
reqwest = { version = "0.12", default-features = false }
rusqlite = { version = "0.37", features = ["bundled", "serde_json"] }
rust-ini = "0.21"
scratchstack-aws-signature = "=0.10" # Must stay 0.10 for now (Feb 2026)
serde = "1.0"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
serial_test = "3.0"
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
strum = { version = "0.27", default-features = false }
strum_macros = { version = "0.27", default-features = false }
syn = { version = "2.0", features = ["full"] }
thiserror = "2.0"
time = "0.3"
tiny-keccak = "2.0"
tempfile = "3.19"
tokio = { version = "1.44", default-features = false }
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-serde_json-1",
] }
tokio-rusqlite = "0.7"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
url = "2.5"
uuid = "=1.11.1"
wasm-bindgen = "0.2.108"
wasm-bindgen-test = "0.3"
x509-cert = { version = "0.2", default-features = false }
x509-parser = "0.17"
zeroize = { version = "1.8", default-features = false }
