[package]
name = "kms_cli"
version = "0.1.0"
edition = "2021"
description = "CLI used to manage the Cosmian KMS."

[[bin]]
name = "kms-cli"
path = "src/main.rs"

[dependencies]
abe_gpsw = { version = "0.6.4", features = ["interfaces"] }
clap = { version =  "3.1.8", features = ["derive"] }
cosmian_kms_common = { path = "../kms/kms_common" }
cosmian_kms_client = { path = "../kms/kms_client" }
cosmian_rust_lib = { path = "../kms/rust_lib" }
eyre = "0.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
cosmian_kms_server = { path = "../kms/kms_server", features = ["dev"] }
file_diff = "1.0.0"
predicates = "2.1"
regex = "1.5.5"
reqwest = { version = "0.11", features = ["json"] }

