[package]
authors = ["Bruno Grieder <bruno.grieder@cosmian.com>"]
edition = "2021"
name = "cosmian_kms_client"
version = "0.1.0"

[dependencies]
cosmian_kms_common = { path = "../kms_common" }
hex = { version = "0.4", features = ["serde"] }
http = "0.2"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

