[package]
authors = ["Bruno Grieder <bruno.grieder@cosmian.com>"]
edition = "2021"
name = "cosmian_kms_server"
version = "2.0.0"

[features]
dev = []

[dependencies]
abe_gpsw = { version = "0.6.5", features = ["interfaces"] }
# for development
# abe_gpsw = { path = "../../../../abe_gpsw", features = ["interfaces"] }
actix-identity = "0.4"
actix-service = "2.0"
actix-web = { version = "4.0", features = ["openssl"] }
alcoholic_jwt = "1.0"
async-trait = "0.1"
bitflags = "1.2"
clap = { version = "3.1", features = ["derive"] }
chrono = "0.4"
cosmian_crypto_base = { version = "0.5.2", features = ["libsodium"] }
cosmian_kmip = { path = "../kmip" }
cosmian_kms_utils = { path = "../utils" }
cosmian_mcfe = { git = "https://github.com/Cosmian/DMCFE.git", branch = "feature/add_mcfe" }
env_logger = "0.9"
# eyre is used to handle errors related to the server binary
eyre = "0.6"
futures = "0.3"
hex = { version = "0.4", features = ["serde"] }
# for status codes
http = "0.2"
num-bigint = "0.4"
once_cell = "1.9"
rand_core = "0.6"
rand_hc = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
sqlx = { version = "0.5", features = [
  "json",
  "runtime-actix-native-tls",
  "mysql",
  "postgres",
  "sqlite"
] }
# thiserror is used to handle errors propagated through HTTP response 
# to set a proper http status code
thiserror = "1.0.20"
torus_fhe = { git = "http://gitlab.cosmian.com/other/tfhe.git" }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2"
twelf = "0.3.1"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
actix-rt = "2.6"
actix-http = "3.0"
tempfile = "3.1"
serial_test = "0.6"
