[package]
name = "cosmian_findex_redis"
version = "4.5.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
redis = { workspace = true }
cloudproof = { workspace = true }
#branch = "fix/make_compact_callback_async",
cosmian_findex = { git = "https://github.com/Cosmian/findex.git", rev = "01d9be7d9b5f7944f50a2dcad44d534a9fde257e" }
thiserror = { workspace = true }
tokio = { version = "1.25", features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "2.0.0"
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
