[package]
name = "cosmian_kms_access"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMS Access - handling users permissions"

[lints]
workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
cosmian_kmip = { path = "../kmip", version = "5.7.1", default-features = true }
serde = { workspace = true }
