[package]
name = "cosmian_kms_access"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMS Access - handling users permissions"

[lints]
workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
cosmian_kmip = { path = "../kmip", version = "5.14.0", default-features = true }
serde = { workspace = true }
