[package]
name = "ckms_pkcs11"
version = "4.13.3"
edition = "2021"

[lib]
name = "ckms_pkcs11"
crate-type = ["dylib"]

[dependencies]
#native-pkcs11 = "0.2.16"
#native-pkcs11-traits = "0.2.16"
cosmian_kmip ={ git = "https://github.com/Cosmian/kms.git",tag = "4.13.3" }
cosmian_kms_cli ={ git = "https://github.com/Cosmian/kms.git",tag = "4.13.3" }
cosmian_kms_client ={ git = "https://github.com/Cosmian/kms.git",tag = "4.13.3" }
dirs = "5.0.1"
native-pkcs11 = { path = "../../native-pkcs11/native-pkcs11" }
native-pkcs11-traits = { path = "../../native-pkcs11/native-pkcs11-traits" }
tracing = "0.1.40"
serde_json = "1.0.114"
zeroize = "1.7.0"