[package]
name = "cosmian_cli"
version.workspace = true
authors.workspace = true
categories = ["security"]
edition.workspace = true
keywords = ["cosmian_cli", "kms", "findex", "findex-server", "cosmian"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = """
Command Line Interface used to manage the KMS and Findex servers.

If any assistance is needed, please either visit the Cosmian technical documentation at https://docs.cosmian.com
or contact the Cosmian support team on Discord https://discord.com/invite/7kPMNtHpnz
"""

[[bin]]
name = "cosmian"
path = "src/main.rs"
test = false

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
fips = [
  "cosmian_kms_client/fips",
  "cosmian_kms_crypto/fips",
  "test_kms_server/fips",
]

[dependencies]
base64 = { workspace = true }
clap = { workspace = true, features = [
  "help",
  "env",
  "std",
  "usage",
  "error-context",
  "derive",
  "cargo",
] }
cosmian_config_utils = { workspace = true }
cosmian_cover_crypt = { workspace = true }
cosmian_crypto_core = { workspace = true }
cosmian_findex = { workspace = true, features = ["redis-mem"] }
cosmian_findex_client = { path = "../findex_client" }
cosmian_findex_structs = { workspace = true }
cosmian_kms_client = { path = "../kms_client" }
cosmian_kms_crypto = { workspace = true }
cosmian_logger = { workspace = true }
csv = "1.3.1"
der = { workspace = true, features = ["pem"] }
hex = { workspace = true }
jwt-simple = { version = "0.12", default-features = false, features = [
  "pure-rust",
] }
leb128 = { workspace = true }
num-format = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
x509-cert = { workspace = true, features = ["pem"] }
zeroize = { workspace = true }

[dev-dependencies]
actix-rt = "2.10"
actix-server = { workspace = true }
assert_cmd = "2.0"
const-oid = { version = "0.9", features = ["db"] }
cosmian_findex = { workspace = true, features = ["redis-mem", "test-utils"] }
lazy_static = "1.5"
openssl = { workspace = true }
predicates = "3.1"
regex = { version = "1.11", default-features = false }
tempfile = "3.16"
test_findex_server = { path = "../test_findex_server" }
test_kms_server = { path = "../test_kms_server" }
x509-parser = { workspace = true, features = ["verify"] }

# ------------------------------------------------------------------------------
# START DEBIAN PACKAGING
[package.metadata.deb]
maintainer = "Cosmian support team <tech@cosmian.com>"
copyright = "2025, Cosmian Tech SAS <tech@cosmian.com>"
license-file = ["../../LICENSE", "0"]
changelog = "../../CHANGELOG.md"
section = "security"
priority = "optional"
assets = [
  [
    "target/release/cosmian",
    "usr/sbin/",
    "555",
  ],
  [
    "target/release/cosmian_gui",
    "usr/sbin/",
    "555",
  ],
]

[package.metadata.deb.variants.fips]
features = ["fips"]

# END DEBIAN PACKAGING
# ------------------------------------------------------------------------------

# ------------------------------------------------------------------------------
# START RPM PACKAGING
[package.metadata.generate-rpm]
license = "BUSL-1.1"
assets = [
  { source = "target/release/cosmian", dest = "/usr/sbin/cosmian", mode = "555" },
  { source = "target/release/cosmian_gui", dest = "/usr/sbin/cosmian_gui", mode = "555" },
]
auto-req = "no" # do not try to discover .so dependencies
require-sh = true

# END RPM PACKAGING
# ------------------------------------------------------------------------------
