[package]
name = "cosmian_kms_cli"
version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = """
Command Line Interface used to manage the KMS server

If any assistance is needed, please either visit the Cosmian technical documentation at https://docs.cosmian.com
or contact the Cosmian support team on Discord https://discord.com/invite/7kPMNtHpnz
"""

[lints]
workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
non-fips = [
  "cosmian_kms_client/non-fips",
  "cosmian_kms_crypto/non-fips",
  "cosmian_kmip/non-fips",
  "test_kms_server/non-fips",
]

[dependencies]
base64 = { workspace = true }
clap = { workspace = true, features = [
  "help",
  "env",
  "std",
  "usage",
  "error-context",
  "derive",
  "cargo",
] }
cosmian_config_utils = { workspace = true }
cosmian_kmip = { path = "../kmip", version = "5.15.0" } # only to be reexported, not used directly
cosmian_kms_client = { path = "../kms_client", version = "5.15.0" }
cosmian_kms_crypto = { path = "../crypto", version = "5.15.0" }
cosmian_logger = { workspace = true }
der = { workspace = true, features = ["pem"] }
hex = { workspace = true }
jsonwebtoken = "9.3"
leb128 = { workspace = true }
num-format = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
uuid = { workspace = true }
x509-cert = { workspace = true, features = ["pem"] }
zeroize = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
cosmian_kms_client_utils = { path = "../client_utils", version = "5.15.0" }
openssl = { workspace = true }
serial_test = "3.0"
tempfile = "3.19"
test_kms_server = { path = "../test_kms_server" }
x509-parser = { workspace = true, features = ["verify"] }
