[package]
name = "cosmian_kms_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
fips = ["cosmian_kmip/fips"]

[dependencies]
base64 = { workspace = true }
cloudproof = { workspace = true }
cosmian_kmip = { path = "../kmip", default-features = true }
der = { workspace = true }
log = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true, features = ["default", "json", "native-tls"] }
rustls = { workspace = true, features = ["dangerous_configuration"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
webpki-roots = "0.22"
x509-cert = { workspace = true }
zeroize = { workspace = true }
