[package]
name = "cosmian_kms_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
fips = ["cosmian_kmip/fips"]

[dependencies]
cloudproof = { workspace = true }
cosmian_http_client = { workspace = true }
cosmian_config_utils = { workspace = true }
cosmian_logger = { workspace = true }
cosmian_kmip = { path = "../kmip" }
cosmian_kms_access = { path = "../access" }
der = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true, features = ["default", "json", "native-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
