[package]
name = "cosmian_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
base64 = { workspace = true }
cosmian_config_utils = { workspace = true }
cosmian_crypto_core = { workspace = true }
cosmian_findex = { workspace = true }
cosmian_findex_structs = { workspace = true }
cosmian_http_client = { workspace = true }
cosmian_kms_cli = { workspace = true }
cosmian_logger = { workspace = true }
reqwest = { workspace = true, features = ["default", "json", "native-tls"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
cosmian_findex = { workspace = true, features = ["test-utils"] }
rand = "0.9.0"
rand_chacha = "0.9.0"
tokio = { workspace = true }
