[package]
name = "cosmian_kms_client_utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cosmian KMS Client Utilities - used in WASM and KMS Client"

[lib]
crate-type = ["cdylib", "rlib"]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
non-fips = ["cosmian_kmip/non-fips"]

[dependencies]
base64.workspace = true
clap = { workspace = true, features = ["std", "derive"] }
cosmian_config_utils = { workspace = true }
cosmian_kmip = { path = "../kmip", version = "5.4.1" }
cosmian_kms_access = { path = "../access", version = "5.4.1" }
pem = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["std", "derive", "strum_macros"] }
time = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
